color change adding reconnect

--- a/app/src/main/res/drawable/circle_background.xml
+++ b/app/src/main/res/drawable/circle_background.xml
@@ -4,7 +4,7 @@
 
     <stroke
         android:width="2dp"
-        android:color="#FF000000" />
+        android:color="@color/primaryTextColor" />
 
     <size
         android:width="120dp"
