--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#1E1E30"
     tools:context=".view.ChatActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -21,7 +22,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/loading-screen"
+        android:id="@+id/loading_screen"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone">
@@ -35,6 +36,7 @@
             android:layout_marginBottom="16dp"
             android:text="@string/loading_connection"
             android:textSize="18sp"
+            android:textColor="@color/primaryTextColor"
             app:layout_constraintBottom_toTopOf="@+id/progressBar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -72,21 +74,25 @@
             android:id="@+id/reyclerview_message_list"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toTopOf="@id/layout_chatbox"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- A horizontal line between the chatbox and RecyclerView -->
-        <View
-            android:layout_width="0dp"
-            android:layout_height="2dp"
-            android:layout_marginBottom="0dp"
-            android:background="#dfdfdf"
-            app:layout_constraintBottom_toTopOf="@+id/layout_chatbox"
+        <TextView
+            android:id="@+id/checkOnline"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            android:orientation="vertical"
+            android:textAlignment="center"
+            android:background="@android:color/transparent"
+            android:textColor="@android:color/white"
+            android:text="You cannot chat until the device is connected!"
+            app:layout_constraintBottom_toBottomOf="@id/messengerLayout"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            android:visibility="invisible"
+            app:layout_constraintRight_toRightOf="parent"/>
 
         <LinearLayout
             android:id="@+id/layout_chatbox"
@@ -95,7 +101,7 @@
             android:background="#ffffff"
             android:minHeight="48dp"
             android:orientation="horizontal"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/messengerLayout"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent">
 
