--- a/app/src/main/res/layout/received_message_holder.xml
+++ b/app/src/main/res/layout/received_message_holder.xml
@@ -2,7 +2,8 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingBottom="5dp">
 
     <RelativeLayout
         android:id="@+id/messageContainer"
@@ -32,10 +33,11 @@
         android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginBottom="8dp"
+        android:paddingLeft="10dp"
         android:text="TextView"
         android:textSize="12sp"
+        android:textColor="@color/primaryTextColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/messageContainer"
         app:layout_constraintTop_toBottomOf="@+id/messageContainer" />
