--- a/app/src/main/res/layout/sent_message_holder.xml
+++ b/app/src/main/res/layout/sent_message_holder.xml
@@ -2,7 +2,8 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:paddingBottom="5dp">
 
     <RelativeLayout
         android:id="@+id/messageContainer"
@@ -32,9 +33,10 @@
         android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
+        android:paddingEnd="10dp"
         android:text="TextView"
+        android:textColor="@color/primaryTextColor"
         android:textSize="12sp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
