--- a/app/src/main/res/menu/menu_chat.xml
+++ b/app/src/main/res/menu/menu_chat.xml
@@ -4,8 +4,8 @@
 
     <item
         android:id="@+id/delete_button"
-        android:icon="@drawable/ic_delete_24dp"
-        android:title="@string/delete"
+        android:icon="@drawable/connect"
+        android:title="@string/connect"
         app:showAsAction="ifRoom" />
 
 </menu>
