--- a/app/src/main/res/drawable/circle_background.xml
+++ b/app/src/main/res/drawable/circle_background.xml
@@ -4,9 +4,10 @@
 
     <stroke
         android:width="2dp"
-        android:color="@color/primaryTextColor" />
+        android:color="@android:color/transparent" />
 
     <size
         android:width="120dp"
         android:height="120dp" />
+    <solid android:color="@color/colorAccent"/>
 </shape>
