--- a/app/src/main/res/layout/received_message_holder.xml
+++ b/app/src/main/res/layout/received_message_holder.xml
@@ -1,44 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="5dp">
 
     <RelativeLayout
         android:id="@+id/messageContainer"
-        android:layout_width="0dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="128dp"
         android:gravity="start"
-        app:layout_constraintBottom_toTopOf="@id/date"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        tools:ignore="MissingConstraints">
+
+        <ImageView
+            android:id="@+id/avatar"
+            android:layout_width="32dp"
+            android:layout_height="32sp"
+            android:src="@drawable/avatar"
+            android:layout_marginTop="2dp"
+            android:padding="5dp"
+            android:layout_marginRight="5dp"
+            android:background="@drawable/circle_background"/>
 
         <TextView
             android:id="@+id/messageText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/avatar"
             android:background="@drawable/received_message_background"
             android:gravity="start"
-            android:padding="10dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="5dp"
+            android:layout_margin="2dp"
+            android:paddingBottom="5dp"
+            android:textSize="18sp"
             android:text="MESSAGE"
             android:textColor="#000000" />
+        <TextView
+            android:id="@+id/date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:text="TextView"
+            android:textSize="12sp"
+            android:layout_below="@+id/messageText"
+            android:textColor="@color/primaryTextColor"
+            android:layout_toRightOf="@+id/avatar"
+            android:layout_marginTop="10dp"/>
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:paddingLeft="10dp"
-        android:text="TextView"
-        android:textSize="12sp"
-        android:textColor="@color/primaryTextColor"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/messageContainer"
-        app:layout_constraintTop_toBottomOf="@+id/messageContainer" />
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
