--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -54,12 +54,13 @@
 
         <Button
             android:id="@+id/stopSearch"
-            android:layout_width="150dp"
-            android:layout_height="50dp"
+            android:layout_width="130dp"
+            android:layout_height="40dp"
             android:layout_marginTop="16dp"
             android:textAllCaps="false"
             android:text="@string/cancelButtonTitle"
-            android:background="@drawable/received_message_background"
+            android:textColor="@android:color/white"
+            android:background="@drawable/stop_background"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -112,7 +113,10 @@
                 android:id="@+id/edittext_chatbox"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:background="@drawable/chatbox_backgrouond"
                 android:layout_gravity="center"
                 android:layout_marginLeft="16dp"
@@ -123,7 +127,7 @@
             <ImageButton
                 android:id="@+id/button_chatbox_send"
                 android:layout_width="64dp"
-                android:layout_height="48dp"
+                android:layout_height="match_parent"
                 android:layout_gravity="bottom"
                 android:src="@drawable/ic_send_24dp"
                 android:background="@android:color/transparent"
