--- a/app/src/main/res/layout/received_message_holder.xml
+++ b/app/src/main/res/layout/received_message_holder.xml
@@ -40,7 +40,7 @@
             android:paddingBottom="5dp"
             android:textSize="18sp"
             android:text="MESSAGE"
-            android:textColor="#000000" />
+            android:textColor="#fff" />
         <TextView
             android:id="@+id/date"
             android:layout_width="wrap_content"
