--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -109,6 +109,18 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent">
 
+            <ImageView
+                android:id="@+id/file_chooser"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/insert_file"
+                android:layout_marginLeft="16dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:padding="3dp"
+                android:layout_gravity="center"
+                />
+
             <EditText
                 android:id="@+id/edittext_chatbox"
                 android:layout_width="0dp"
