--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -2,9 +2,10 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/change_bg_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg2"
+    android:background="#161638"
     tools:context=".view.ChatActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -114,10 +115,21 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/insert_file"
-                android:layout_marginLeft="16dp"
+                android:layout_marginLeft="10dp"
                 android:clickable="true"
                 android:focusable="true"
                 android:padding="3dp"
+                android:layout_gravity="center"
+                />
+            <ImageView
+                android:id="@+id/voice"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/voice_icon"
+                android:layout_marginLeft="10dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:padding="2dp"
                 android:layout_gravity="center"
                 />
 
